decaf-compiler/samples/lex/baddouble.decaf.out

*** Error line 2.
.12
^
*** syntax error

